Fix position of left section overlapping the right

--- a/style.css
+++ b/style.css
@@ -2,17 +2,27 @@ body {
 
 }
 
+
+
 .top {
     background-color: deepskyblue;
 }
 
+.main-sec{
+    display: flex;
+
+}
+
 .left-sec {
-    position: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 300px;
     background-color: lightskyblue;
+}
+
+.right-sec {
+    
 }
 
 
